- GApplicationPar::time(GTimeReference&)
- GApplicationPar::time(GTime&)
- GModelSpectralNodes(GModelSpectral&, GEnergies&)
- GFitsTableCol::scale(double&, double&)
- GCOMInstDir(GSkyDir&, double&)
- GEbounds::operator==(GEbounds&, GEbounds&)
- GEbounds::operator!=(GEbounds&, GEbounds&)
- GPha::operator+=(GPha&)
- GPha::operator-=(GPha&)
- GPha::operator*=(double&)
- operator+(GPha&, GPha&)
- operator-(GPha&, GPha&)
- operator*(GPha&, double&)
- operator*(double&, double&)

The following methods have been removed:
- n.a.

The following methods have been renamed:
- n.a.

The arguments for the following methods have been changed:
- GCOMResponse(GCaldb&, std::string&)
- GCOMObservation::response(GCaldb&, std::string&)

The return value of the following methods has been changed:
- n.a.


3. Configuration
-----------------
A code generator script codegen.py has been added to the dev folder to ease
the addition of code extensions to GammaLib.


4. Application module
---------------------
A time parameter with type "t" has was to allow specifying time values in
various formats to time systems to an application. Methods were added to set
and retrieve the time value (#1864).


5. Base module
--------------
None


6. FITS I/O Interface
---------------------
The GFitsTableCol::scale() method has been added to allow setting the
TSCALE and TZERO values before reading the column data. The keywords
that may exist in the FITS file are not affected by the setting (#2191).


7. Linear algebra module
------------------------
None


8. Model module
---------------
A spectral model constructor was added to GModelSpectralNodes to allow
conversion of any spectral model into a spectral node model (#2178).

A bug was corrected in GModelSpatialComposite::copy_members() that led to a
segmentation fault when writing a composite spatial model into an XML file.


9. Numerics module
------------------
None


10. Observation module
----------------------