@@ -57,6 +57,10 @@ public:
     double&          at(const int& index);
     const GEbounds&  ebounds(void) const;
     double           counts(void) const;
+    void             areascal(const int& index, const double& areascal);
+    const double&    areascal(const int& index) const;
+    void             backscal(const int& index, const double& backscal);
+    const double&    backscal(const int& index) const;
     const double&    underflow(void) const;
     const double&    overflow(void) const;
     const double&    outflow(void) const;
