@@ -47,6 +47,10 @@ The following methods have been added:
 - GPha::operator+=(GPha&)
 - GPha::operator-=(GPha&)
 - GPha::operator*=(double&)
+- GPha::areascal(int&, double&)
+- GPha::areascal(int&)
+- GPha::backscal(int&, double&)
+- GPha::backscal(int&)
 - operator+(GPha&, GPha&)
 - operator-(GPha&, GPha&)
 - operator*(GPha&, double&)
@@ -155,6 +159,7 @@ None
 16. Xspec module
 ----------------
 Add arithmetic operators for GPha class to add, subtract and scale spectra.
+Add methods to set and retrieve the area and background scaling factors.
 
 
 17. Test module
